contracts/gear-lib-ng/tests/derive/3-not-struct.stderr
error: `StorageProvider` deriving is supported only with structs
 --> tests/derive/3-not-struct.rs:7:1
  |
7 | enum ContractEnum {
  | ^^^^

error: `StorageProvider` deriving is supported only with structs
  --> tests/derive/3-not-struct.rs:16:1
   |
16 | union ContractUnion {
   | ^^^^^
